--- a/portfolio2/src/components/Component.css
+++ b/portfolio2/src/components/Component.css
@@ -1,6 +1,8 @@
 .Nav-Style{height: 100px;
-background-color: #394D6B;
+/* background-color: #394D6B; */
+/* background-image: url('../assets/Background.jpeg'); */
 color: white;
+opacity: .75;
 font-size: 30px;
 padding-top: 30px;
 display: flex;
@@ -9,7 +11,7 @@ font-family: "Courier New", Courier, monospace;
 font-size: 29px;
 letter-spacing: 2.2px;
 word-spacing: 2.4px;
-margin-bottom: .25em;
+/* margin-bottom: .25em; */
 font-weight: 700;
 text-decoration: none;
 font-style: normal;
